--- a/index.html
+++ b/index.html
@@ -37,6 +37,15 @@
 						</div>
 					</section>
 
+					<section id="one">
+						<div class="inner">
+							<header class="major">
+								<h2>Analytics</h2>
+							</header>
+							<p>Data Science Competitions. For Example, <a href="http://html5up.net/license">Kaggle</a> and so on.</p>
+						</div>
+					</section>
+
 				<!-- Main -->
 					<div id="main">
 
@@ -48,10 +57,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="https://github.com/shota-imazeki-108/data_science_bowl_2019" class="link">2019 Data Science Bowl</a></h3>
-										<p>Uncover the factors to help measure how young children learn <br><br>
-											category: data science competitions <br><br>
-											Rank: 158th(Top 5%) <br><br>
-											Keyword: Machine Learning, Multi Classification, Quadratic Weighted Kappa, LightGBM, XGBoost, CatBoost
+										<p>Keyword: Machine Learning, Multi Classification, Quadratic Weighted Kappa, LightGBM, XGBoost, CatBoost
 											, Ensemble Learning, Cross Validation, Adversarial Validation, Threshold Optimizer, Random Seed Averaging
 										</p>
 									</header>
