--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 				<!-- Main -->
 					<div id="main">
 
-						<!-- One -->
+						<!-- Analytics -->
 							<section id="one" class="tiles">
 								<article>
 									<span class="image">
@@ -57,8 +57,8 @@
 									</span>
 									<header class="major">
 										<h3><a href="https://github.com/shota-imazeki-108/data_science_bowl_2019" class="link">2019 Data Science Bowl</a></h3>
-										<p>Keyword: Machine Learning, Multi Classification, Quadratic Weighted Kappa, LightGBM, XGBoost, CatBoost
-											, Ensemble Learning, Cross Validation, Adversarial Validation, Threshold Optimizer, Random Seed Averaging
+										<p>Keyword: Education, Game, Machine Learning, Multi Classification, Quadratic Weighted Kappa, LightGBM
+											, Cross Validation, Adversarial Validation, Threshold Optimizer, Random Seed Averaging
 										</p>
 									</header>
 								</article>
@@ -67,17 +67,10 @@
 										<img src="images/laos2.png" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Tempus</a></h3>
-										<p>feugiat amet tempus</p>
-									</header>
-								</article>
-								<article>
-									<span class="image">
-										<img src="images/fireflower.png" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="landing.html" class="link">Magna</a></h3>
-										<p>Lorem etiam nullam</p>
+										<h3><a href="https://github.com/shota-imazeki-108/ncaa_2020" class="link">Google Cloud & NCAA® ML Competition 2020-NCAAW</a></h3>
+										<p>Keyword: Sports, Basketball, Binary Classification, Cross Entropy Error, XGBoost, Permutation Importance
+											, Spline Interpolation, Time Series Validation, Mlflow, 
+										</p>
 									</header>
 								</article>
 								<article>
@@ -85,8 +78,21 @@
 										<img src="images/temple.png" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Ipsum</a></h3>
-										<p>Nisl sed aliquam</p>
+										<h3><a href="https://github.com/shota-imazeki-108/twitter_sentiment_extract" class="link">Twitter Sentiment Extract</a></h3>
+										<p>Keyword: Twitter, Natural Language Processing, Word-Level Jaccard Score, PyTorch, Question Answering Model, Word2vec, Tokenizer
+											, BERT, RoBERTa, Google Colab, bertviz, Attention-Head, JapaneseTokenizer
+										</p>
+									</header>
+								</article>
+								<article>
+									<span class="image">
+										<img src="images/flower.png" alt="" />
+									</span>
+									<header class="major">
+										<h3><a href="https://github.com/shota-imazeki-108/atmacup5" class="link">atmacup #5</a></h3>
+										<p>Keyword: Optical spectrum, Waveform Data, Multimodal Data, Binary Classification, Average Precision Score, PyTorch
+											, LightGBM, t-SNE, CNN, Stuking, WaveNet, 
+										</p>
 									</header>
 								</article>
 								<article>
@@ -94,8 +100,8 @@
 										<img src="images/sea3.png" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Consequat</a></h3>
-										<p>Ipsum dolor sit amet</p>
+										<h3><a href="index.html" class="link">Untitled</a></h3>
+										<p>Coming soon...</p>
 									</header>
 								</article>
 								<article>
@@ -103,16 +109,37 @@
 										<img src="images/hakone.png" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Etiam</a></h3>
-										<p>Feugiat amet tempus</p>
+										<h3><a href="index.html" class="link">Untitled</a></h3>
+										<p>Coming soon...</p>
+									</header>
+								</article>
+							</section>
+
+							<!-- Development -->
+							<section id="one">
+								<div class="inner">
+									<header class="major">
+										<h2>Development</h2>
+									</header>
+									<p>System Development, Data Engineering, Dashboard, and so on...</p>
+								</div>
+							</section>
+							<section id="one" class="tiles">
+								<article>
+									<span class="image">
+										<img src="images/los.jpg" alt="" />
+									</span>
+									<header class="major">
+										<h3><a href="landing.html" class="link">LINE bot</a></h3>
+										<p>Keyword: Flask, LineBot-Api, Regular Expressions, Tokenizer, Twitter-API, Google-Translate-API, Tableau</p>
 									</header>
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/tainan.png" alt="" />
+										<img src="images/muangoi2.png" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Untitled</a></h3>
+										<h3><a href="index.html" class="link">Untitled</a></h3>
 										<p>Coming soon...</p>
 									</header>
 								</article>
