--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
 									</span>
 									<header class="major">
 										<h3><a href="https://github.com/shota-imazeki-108/data_science_bowl_2019" class="link">2019 Data Science Bowl</a></h3>
-										<p>Keyword: Education, Game, Machine Learning, Multi Classification, Quadratic Weighted Kappa, LightGBM
-											, Cross Validation, Adversarial Validation, Threshold Optimizer, Random Seed Averaging
+										<p>子供向けの教育アプリで子供がテストに合格するまでの挑戦回数を予測する。</p>
+										<p>Keyword: Quadratic Weighted Kappa, LightGBM, Adversarial Validation, Threshold Optimizer
 										</p>
 									</header>
 								</article>
@@ -68,8 +68,8 @@
 									</span>
 									<header class="major">
 										<h3><a href="https://github.com/shota-imazeki-108/ncaa_2020" class="link">Google Cloud & NCAA® ML Competition 2020-NCAAW</a></h3>
-										<p>Keyword: Sports, Basketball, Binary Classification, Cross Entropy Error, XGBoost, Permutation Importance
-											, Spline Interpolation, Time Series Validation, Mlflow, 
+										<p>バスケットボールの試合における各チームの勝率を予測する。</p>
+										<p>Keyword: Cross Entropy Error, XGBoost, Permutation Importance, Spline Interpolation, Mlflow, 
 										</p>
 									</header>
 								</article>
@@ -79,8 +79,8 @@
 									</span>
 									<header class="major">
 										<h3><a href="https://github.com/shota-imazeki-108/twitter_sentiment_extract" class="link">Twitter Sentiment Extract</a></h3>
-										<p>Keyword: Twitter, Natural Language Processing, Word-Level Jaccard Score, PyTorch, Question Answering Model, Word2vec, Tokenizer
-											, BERT, RoBERTa, Google Colab, bertviz, Attention-Head, JapaneseTokenizer
+										<p>tweetから感情を表す文を抜き出す。</p>
+										<p>Keyword: Natural Language Processing, Word-Level Jaccard Score, Question Answering Model, BERT, RoBERTa
 										</p>
 									</header>
 								</article>
@@ -90,8 +90,8 @@
 									</span>
 									<header class="major">
 										<h3><a href="https://github.com/shota-imazeki-108/atmacup5" class="link">atmacup #5</a></h3>
-										<p>Keyword: Optical spectrum, Waveform Data, Multimodal Data, Binary Classification, Average Precision Score, PyTorch
-											, LightGBM, t-SNE, CNN, Stuking, WaveNet, 
+										<p>光学系装置の観測データを元に，その実験結果を予測する</p>
+										<p>Keyword: Waveform Data, Multimodal, Average Precision Score, LightGBM, t-SNE, CNN
 										</p>
 									</header>
 								</article>
@@ -131,7 +131,8 @@
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">LINE bot</a></h3>
-										<p>Keyword: Flask, LineBot-Api, Regular Expressions, Tokenizer, Twitter-API, Google-Translate-API, Tableau</p>
+										<p>趣味で製作しているLINEbotについて。</p>
+										<p>Keyword: Flask, LineBot-Api, Word Cloud, Google-Translate-API, Tableau</p>
 									</header>
 								</article>
 								<article>
