--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 										<img src="images/sea3.png" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="index.html" class="link">Untitled</a></h3>
+										<h3><a href="index.html" class="link">Global Wheat Detection</a></h3>
 										<p>Coming soon...</p>
 									</header>
 								</article>
@@ -157,7 +157,7 @@
 									<div class="contact-method">
 										<span class="icon solid alt fa-envelope"></span>
 										<h3>Email</h3>
-										information@untitled.tld
+										n4u8m15b16e23r42s108@gmail.com
 									</div>
 								<!-- </section>
 								<section>
