--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 										<img src="images/muangoi2.png" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="https://qiita.com/shota-imazeki" class="link">Qiita</a></h3>
+										<h3><a href="https://qiita.com/shota-imazeki" class="link">Article</a></h3>
 										<p>毎月投稿しているQiita記事のアカウント</p>
 										<p>Keyword: Adversarial Validation, Mlflow, sklearn.piplein, Time Series Data</p>
 									</header>
