--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 										<img src="images/pond.png" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="https://github.com/shota-imazeki-108/data_science_bowl_2019" class="link" onclick="ga('send', 'event', 'click', 'data_science_bowl_2019');">2019 Data Science Bowl</a></h3>
+										<h3><a href="https://github.com/shota-imazeki-108/data_science_bowl_2019" class="link" onclick="ga('send', 'event', 'link', 'click', 'data_science_bowl_2019', '1');">2019 Data Science Bowl</a></h3>
 										<p>子供向けの教育アプリで子供がテストに合格するまでの挑戦回数を予測する。</p>
 										<p>Keyword: Quadratic Weighted Kappa, LightGBM, Adversarial Validation, Threshold Optimizer
 										</p>
