--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 										<img src="images/laos2.png" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="https://github.com/shota-imazeki-108/ncaa_2020" class="link" onclick="ga('send', 'event', 'click', 'ncaa_2020');">Google Cloud & NCAA® ML Competition 2020-NCAAW</a></h3>
+										<h3><a href="https://github.com/shota-imazeki-108/ncaa_2020" class="link"  onclick="gtag('event', 'click', {'event_category': 'git','event_label': 'ncaa_2020'});">Google Cloud & NCAA® ML Competition 2020-NCAAW</a></h3>
 										<p>バスケットボールの試合における各チームの勝率を予測する。</p>
 										<p>Keyword: Cross Entropy Error, XGBoost, Permutation Importance, Spline Interpolation, Mlflow, 
 										</p>
@@ -87,7 +87,7 @@
 										<img src="images/temple.png" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="https://github.com/shota-imazeki-108/twitter_sentiment_extract" class="link" onclick="ga('send', 'event', 'click', 'twitter_sentiment_extract');">Twitter Sentiment Extract</a></h3>
+										<h3><a href="https://github.com/shota-imazeki-108/twitter_sentiment_extract" class="link"  onclick="gtag('event', 'click', {'event_category': 'git','event_label': 'twitter_sentiment_extract'});">Twitter Sentiment Extract</a></h3>
 										<p>tweetから感情を表す文を抜き出す。</p>
 										<p>Keyword: Natural Language Processing, Word-Level Jaccard Score, Question Answering Model, BERT, RoBERTa
 										</p>
@@ -98,7 +98,7 @@
 										<img src="images/flower.png" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="https://github.com/shota-imazeki-108/atmacup5" class="link" onclick="ga('send', 'event', 'click', 'atmacup5');">atmacup #5</a></h3>
+										<h3><a href="https://github.com/shota-imazeki-108/atmacup5" class="link"  onclick="gtag('event', 'click', {'event_category': 'git','event_label': 'atmacup5'});">atmacup #5</a></h3>
 										<p>光学系装置の観測データを元に，その実験結果を予測する</p>
 										<p>Keyword: Waveform Data, Multimodal, Average Precision Score, LightGBM, t-SNE, CNN
 										</p>
@@ -139,7 +139,7 @@
 										<img src="images/los.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="https://github.com/shota-imazeki-108/line_bot_aizen" class="link" onclick="ga('send', 'event', 'click', 'line_bot');">LINE bot</a></h3>
+										<h3><a href="https://github.com/shota-imazeki-108/line_bot_aizen" class="link"  onclick="gtag('event', 'click', {'event_category': 'git','event_label': 'line_bot_aizen'});">LINE bot</a></h3>
 										<p>趣味で製作しているLINEbotについて。</p>
 										<p>Keyword: Flask, LineBot-Api, Word Cloud, Google-Translate-API, Tableau</p>
 									</header>
@@ -149,7 +149,7 @@
 										<img src="images/muangoi2.png" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="https://qiita.com/shota-imazeki" class="link" onclick="ga('send', 'event', 'click', 'qiita');">Article</a></h3>
+										<h3><a href="https://qiita.com/shota-imazeki" class="link"  onclick="gtag('event', 'click', {'event_category': 'qiita','event_label': 'account_page'});">Article</a></h3>
 										<p>毎月投稿しているQiita記事のアカウント</p>
 										<p>Keyword: Adversarial Validation, Mlflow, sklearn.piplein, Time Series Data</p>
 									</header>
