--- a/index.html
+++ b/index.html
@@ -110,7 +110,8 @@
 									</span>
 									<header class="major">
 										<h3><a href="index.html" class="link">Global Wheat Detection</a></h3>
-										<p>Coming soon...</p>
+										<p>ヨーロッパの小麦画像をもとに、オーストラリア、日本、中国の小麦画像の物体検知を行う。</p>
+										<p>Keyword: EfficientDet, Data Augmentation, Tast Time Augmentation, Pseudo labeling, OpneCV</p>
 									</header>
 								</article>
 								<article>
