--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 										<img src="images/sea3.png" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="index.html" class="link">Global Wheat Detection</a></h3>
+										<h3><a href="https://github.com/shota-imazeki-108/global_wheat_detection" class="link"  onclick="gtag('event', 'click', {'event_category': 'git','event_label': 'global_wheat_detection'});">global_wheat_detection</a></h3>
 										<p>ヨーロッパの小麦画像をもとに、オーストラリア、日本、中国の小麦画像の物体検知を行う。</p>
 										<p>Keyword: EfficientDet, Data Augmentation, Tast Time Augmentation, Pseudo labeling, OpneCV</p>
 									</header>
