--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
 									My profile is ... <br>
 									・Age: 26 <br>
 									・Birthplace: Chiba, Japan <br>
-									・Job: Data Scientist <br>
+									・Job: Data Engineer <br>
+									・Kaggle:<a href="https://www.kaggle.com/imazekishota" class="link">Expert</a> <br>
+									・Qualified: AWS Solutions Architect – Associate<br>
 								</p>
 							</div>
 						</div>
@@ -109,9 +111,28 @@
 										<img src="images/sea3.png" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="https://github.com/shota-imazeki-108/global_wheat_detection" class="link"  onclick="gtag('event', 'click', {'event_category': 'git','event_label': 'global_wheat_detection'});">global_wheat_detection</a></h3>
+										<h3><a href="https://github.com/shota-imazeki-108/global_wheat_detection" class="link"  onclick="gtag('event', 'click', {'event_category': 'git','event_label': 'global_wheat_detection'});">Global Wheat Detection</a></h3>
 										<p>ヨーロッパの小麦画像をもとに、オーストラリア、日本、中国の小麦画像の物体検知を行う。</p>
 										<p>Keyword: EfficientDet, Data Augmentation, Tast Time Augmentation, Pseudo labeling, OpneCV</p>
+									</header>
+								</article>
+								<article>
+									<span class="image">
+										<img src="images/tainan.png" alt="" />
+									</span>
+									<header class="major">
+										<h3><a href="https://github.com/shota-imazeki-108/Riiid-Answer-Correctness-Prediction" class="link">Riiid-Answer-Correctness-Prediction</a></h3>
+										<p>SANTA TOEICというTOEIC学習アプリでのユーザーの行動履歴をもとに設問に正解できるかどうか判断する二値分類問題</p>
+										<p>Keyword: LightGBM, area under the ROC curve, AWS Deep Learning AMI, Pytorch, Attention , SAKT</p>
+									</header>
+								</article>
+								<article>
+									<span class="image">
+										<img src="images/sea.png" alt="" />
+									</span>
+									<header class="major">
+										<h3><a href="index.html" class="link">Untitled</a></h3>
+										<p>Coming soon...</p>
 									</header>
 								</article>
 								<article>
